tests/cases/traits/errors/structural-capability-field-requirement.ari
fn save(value: has { serial: i64 }) -> i64 {
  return 0;
}

fn main() -> i64 {
  return 0;
}
